crates/bsql/tests/compile_fail/update_without_where.rs
fn main() {
    let _ = bsql::query!("UPDATE users SET login = $login: &str");
}
